routingrule.tf
#make Routing Rule 퍼블릭

#route {
# cidr_block = "0.0.0.0/0"
# gateway_id = aws_internet_gateway.igw.id
#}

resource "aws_route" "public" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw.id
}




resource "aws_route" "private_nat" {
  route_table_id         = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat.id
}
